# Toets1Uitgewerkt

./: README.md  install_packages.sh
casus1/: CMakeLists.txt  package.xml
casus1/launch/: assignment.launch  casus1_assignments1_2.launch  casus1_servers.launch  casus_welcome.launch
casus1/scripts/: assignment1 (orig).py  assignment1.py  assignment2 (orig).py  assignment2.py  box_height_feet.py  box_height_metres.py  counter_with_delay_ac.py  counter_with_delay_as.py  metres_to_feet_client.py  (+3 more)
casus2/: CMakeLists.txt  package.xml  readme.md
casus2/config/: rviz_config1.rviz  rviz_config3.rviz
casus2/launch/: environment.launch  uitwerking.launch  visualize_environment1.launch  visualize_environment2.launch  visualize_environment3.launch
casus2/launch/replacement_robot/: load_robot.launch  view_replacement_robot.launch
casus2/urdf/: environment.xacro  environment1.xacro  environment2.xacro  environment3.xacro  test.urdf  uitwerking.xacro
casus2/urdf/include/: common_materials.xacro
casus2/urdf/robot/: lrmate200ic.xacro  lrmate200ic_macro.xacro
casus2/urdf/robot/iiwa/: iiwa.gazebo.xacro  iiwa14.urdf.xacro  iiwa14.xacro  iiwa7.urdf.xacro  iiwa7.xacro
casus2/urdf/robot/lrmate200ic/: lrmate200ic.xacro
casus2/urdf/robot/m10ia/: common_materials.xacro  m10ia_macro.xacro
casus2/urdf/robot/ur5/: ur5.urdf.xacro  ur5_robot.urdf.xacro
casus3/: CMakeLists.txt  package.xml
casus5/: CMakeLists.txt  package.xml
casus6/: CMakeLists.txt  flexbe_config.json  package.xml
casus_factory_behaviors/: README.md
casus_factory_flexbe_states/: CMakeLists.txt  package.xml  setup.py
casus_factory_states/: CMakeLists.txt  package.xml  setup.py
casus_gazebo/: CMakeLists.txt  package.xml
casus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
casus_msgs/: CMakeLists.txt  package.xml
casus_support/: CMakeLists.txt  package.xml
casus_utilities/: CMakeLists.txt  breakbeam_conveyor_stop.py  package.xml  spawn_object_once.py
documents/: installatie_hrwros.odt
opdracht2/: CMakeLists.txt  package.xml  readme.md
opdracht2/config/: rviz_config2.rviz
opdracht2/launch/: visualize_environment1.launch  visualize_environment2.launch  visualize_environment3.launch  visualize_toets_opdracht2a.launch  visualize_toets_opdracht2b.launch  visualize_toets_opdracht2c.launch
opdracht2/launch/replacement_robot/: load_week2_robot.launch  view_week2_replacement_robot.launch
opdracht2/urdf/: environment1.xacro  opdracht2a.xacro  opdracht2b.xacro  opdracht2c.xacro  test.urdf
opdracht2/urdf/include/: common_materials.xacro
opdracht2/urdf/robot/: lrmate200ic.xacro  lrmate200ic_macro.xacro
opdracht3/: CMakeLists.txt  package.xml
opdracht6/: CMakeLists.txt  flexbe_config.json  package.xml
toets_factory_behaviors/: README.md
toets_factory_behaviors/behaviors/behavior_pick_part_from_conveyor/: package.xml
toets_factory_behaviors/behaviors/behavior_pick_part_from_conveyor/src/behavior_pick_part_from_conveyor/: pick_part_from_conveyor_sm.py
toets_factory_states/: CMakeLists.txt  package.xml  setup.py
toets_gazebo/: CMakeLists.txt  package.xml
toets_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
toets_msgs/: CMakeLists.txt  package.xml
toets_support/: CMakeLists.txt  package.xml
toets_utilities/: CMakeLists.txt  breakbeam_conveyor_stop.py  package.xml
(+283 files in other folders)
