<?xml version="1.0"?>
<package format="2">
  <name>casus_utilities</name>
  <version>0.1.0</version>
  <description>The casus_utilities package</description>
  <maintainer email="donnie@todo.todo">donnie</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


<depend>casus_msgs</depend>

</package>
