<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>opdracht2</name>
  <version>0.1.0</version>
  <description>Toets Avans: Opdrach 1</description>
  <author>G A Harkema</author>
  <maintainer email="donnie@todo.todo">donnie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>toets_support</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
